@startuml
'https://plantuml.com/class-diagram
'
'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}
Account <|..SavingAccount
Account <|..CurrentAccount
Transaction -- TransactionType
Bank o-- Account
SavingAccount o-- Transaction
CurrentAccount o-- Transaction

interface Account{
+ deposit(double: amount)
+ withdraw (double: amount): String
+ generateStatement():String
}
class SavingAccount{
- int: balance
- ArrayList<Transaction>: transactions
- boolean: overdraft
+ deposit(double: amount)
+ withdraw (double: amount): String
+ generateStatement(): String
}
class CurrentAccount{
- int: balance
- ArrayList<Transaction>: transactions
- boolean: overdraft
+ deposit(double: amount)
+ withdraw (double: amount): String
+ generateStatement(): String
}
class Bank {
- ArrayList<Account>: accounts
- ArrayList<Account>: overdraftRequests
+ requestOverdraft(Account: account)
+ overdraftApproval(Account: account, boolean: approval): String
}
class Transaction{
- LocalDate: date
- TransactionType: type
- int: amount
- int: balance
}
enum TransactionType{
DEBIT
CREDIT
}
@enduml